--- a/MusicSearch/Base.lproj/Main.storyboard
+++ b/MusicSearch/Base.lproj/Main.storyboard
@@ -1,14 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +20,99 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="zhL-EH-VI6">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="iQc-ku-ydE"/>
+                                </constraints>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="q4p-zq-IDn"/>
+                                </connections>
+                            </searchBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="55" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="VeT-qF-SqA">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="songCell" id="ozj-Qy-hiF" customClass="SongTableViewCell">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="55"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ozj-Qy-hiF" id="l8B-We-Fti">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="54"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vl7-QH-WNU">
+                                                    <rect key="frame" x="10" y="8" width="150" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="150" id="hkF-nZ-6ps"/>
+                                                        <constraint firstAttribute="height" constant="21" id="ui2-Nc-iWU"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8vi-g6-chY">
+                                                    <rect key="frame" x="10" y="30" width="150" height="17"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="150" id="aZT-bw-dhn"/>
+                                                        <constraint firstAttribute="height" constant="17" id="lNx-qO-4Iz"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4gL-h5-b2D">
+                                                    <rect key="frame" x="317" y="5" width="46" height="44"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="44" id="iPF-x6-hNS"/>
+                                                        <constraint firstAttribute="width" constant="46" id="xPp-O6-rZG"/>
+                                                    </constraints>
+                                                    <state key="normal" title="Button"/>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="8vi-g6-chY" firstAttribute="top" secondItem="Vl7-QH-WNU" secondAttribute="bottom" constant="1" id="0IH-Mm-kB4"/>
+                                                <constraint firstItem="Vl7-QH-WNU" firstAttribute="top" secondItem="l8B-We-Fti" secondAttribute="top" constant="8" id="3Qh-on-tTc"/>
+                                                <constraint firstItem="8vi-g6-chY" firstAttribute="leading" secondItem="l8B-We-Fti" secondAttribute="leading" constant="10" id="3uM-is-b0M"/>
+                                                <constraint firstItem="Vl7-QH-WNU" firstAttribute="leading" secondItem="l8B-We-Fti" secondAttribute="leading" constant="10" id="6VA-wL-CSy"/>
+                                                <constraint firstAttribute="trailing" secondItem="4gL-h5-b2D" secondAttribute="trailing" constant="12" id="Iec-Hm-B1O"/>
+                                                <constraint firstItem="4gL-h5-b2D" firstAttribute="centerY" secondItem="l8B-We-Fti" secondAttribute="centerY" id="swC-F7-Q4d"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="artistLabel" destination="8vi-g6-chY" id="eVI-Xm-RXS"/>
+                                            <outlet property="playButton" destination="4gL-h5-b2D" id="r8D-NZ-OOC"/>
+                                            <outlet property="songLabel" destination="Vl7-QH-WNU" id="ZIA-4X-p4G"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="9QX-de-rlD"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="235-sP-ioA"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="zhL-EH-VI6" secondAttribute="trailing" id="10f-zS-Qd4"/>
+                            <constraint firstItem="zhL-EH-VI6" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="6CV-q3-phr"/>
+                            <constraint firstItem="VeT-qF-SqA" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="A04-jq-cHH"/>
+                            <constraint firstItem="VeT-qF-SqA" firstAttribute="top" secondItem="zhL-EH-VI6" secondAttribute="bottom" id="KNK-Yt-YVq"/>
+                            <constraint firstAttribute="trailing" secondItem="VeT-qF-SqA" secondAttribute="trailing" id="bga-6J-zTN"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="VeT-qF-SqA" secondAttribute="bottom" id="jBz-0s-eBU"/>
+                            <constraint firstItem="zhL-EH-VI6" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="sD2-tK-iDc"/>
+                        </constraints>
                     </view>
+                    <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
+                    <connections>
+                        <outlet property="tableView" destination="VeT-qF-SqA" id="RTR-KV-iCz"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="140" y="37"/>
         </scene>
     </scenes>
 </document>
